kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhir
  labels:
    app: fhir
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fhir
  template:
    metadata:
      labels:
        app: fhir
    spec:
      containers:
      - name: fhir
        image: 765415433338.dkr.ecr.eu-central-1.amazonaws.com/fhir:$IMAGE_TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

kind: Service
apiVersion: v1
metadata:
  name: fhir
spec:
  selector:
    app: fhir
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fhir
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/cors-allow-headers: Content-Type
    nginx.ingress.kubernetes.io/cors-allow-methods: POST, GET, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: https://earztbrief.med-united.health
    nginx.ingress.kubernetes.io/cors-expose-headers: X-Custom-Header
    nginx.ingress.kubernetes.io/cors-max-age: "86400"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
      - fhir.med-united.health
      secretName: fhir-tls
  rules:
  - host: fhir.med-united.health
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fhir
              port:
                number: 8080
